CompCenzano/src/ar/edu/ubp/tc/CGrammarParser.java
// Generated from C:\Users\sebastian\Desktop\FINAL-TC\FinalCenzano\CompCenzano\src\ar\edu\u005Cubp\tc\CGrammar.g4 by ANTLR 4.2.2
package ar.edu.ubp.tc;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CGrammarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, ESTRUCTURA_IF=2, ESTRUCTURA_ELSE=3, ESTRUCTURA_FOR=4, ESTRUCTURA_WHILE=5, 
		TIPO_DATO_INT=6, TIPO_DATO_DOUBLE=7, TIPO_DATO_FLOAT=8, TIPO_DATO_CHAR=9, 
		TIPO_DATO_STRING=10, TIPO_DATO_VOID=11, INSTRUCCION_RETURN=12, CARACTER_PARENTESIS_ABRE=13, 
		CARACTER_PARENTESIS_CIERRA=14, CARACTER_LLAVE_ABRE=15, CARACTER_LLAVE_CIERRA=16, 
		ID=17, NUMERO=18, STRING=19, VALORNULL=20, COMPARADOR_IGUAL=21, COMPARADOR_DISTINTO=22, 
		COMPARADOR_MAYOR=23, COMPARADOR_MENOR=24, COMPARADOR_MAYOR_IGUAL=25, COMPARADOR_MENOR_IGUAL=26, 
		OPERADOR_ASIGNACION=27, OPERADOR_SUMA=28, OPERADOR_RESTA=29, OPERADOR_PRODUCTO=30, 
		OPERADOR_DIVISION=31, OPERADOR_SUMA_COMPUESTA=32, OPERADOR_RESTA_COMPUESTA=33, 
		OPERADOR_PRODUCTO_COMPUESTO=34, OPERADOR_DIVISION_COMPUESTA=35, OPERADOR_INCREMENTO=36, 
		OPERADOR_DECREMENTO=37, OPERADOR_AND=38, OPERADOR_OR=39, SIGNO_COMA=40, 
		SIGNO_PUNTO=41, SIGNO_PUNTO_Y_COMA=42, COMENTARIO_SIMPLE=43, VALOR_NULO=44;
	public static final String[] tokenNames = {
		"<INVALID>", "WS", "'if'", "'else'", "'for'", "'while'", "'int '", "'double '", 
		"'float '", "'char '", "'string '", "'void '", "'return '", "'('", "')'", 
		"'{'", "'}'", "ID", "NUMERO", "STRING", "'null'", "'=='", "'!='", "'>'", 
		"'<'", "'>='", "'<='", "'='", "'+'", "'-'", "'*'", "'/'", "'+='", "'-='", 
		"'*='", "'/='", "'++'", "'--'", "'&&'", "'||'", "','", "'.'", "';'", "COMENTARIO_SIMPLE", 
		"VALOR_NULO"
	};
	public static final int
		RULE_programa = 0, RULE_instrucciones = 1, RULE_declaracion_variable = 2, 
		RULE_declaraciones_asignacion = 3, RULE_termino_matematico = 4, RULE_lista_expresiones_matematicas = 5, 
		RULE_declaracion_funcion = 6, RULE_parametros_en_declaracion = 7, RULE_lista_parametros_en_declaracion = 8, 
		RULE_llamada_funcion = 9, RULE_valor_funcion = 10, RULE_parametros_en_llamada = 11, 
		RULE_lista_parametros_en_llamada = 12, RULE_bloque_instrucciones = 13, 
		RULE_retorno = 14, RULE_asignacion = 15, RULE_operador_incremento_decremento = 16, 
		RULE_for_asignacion = 17, RULE_for_lista_asignaciones = 18, RULE_operador_asignacion_compuesta = 19, 
		RULE_estructura_control = 20, RULE_estructura_control_if = 21, RULE_estructura_control_else = 22, 
		RULE_expresion_logica = 23, RULE_lista_expresiones_logicas = 24, RULE_termino_logico = 25, 
		RULE_lista_terminos_logicos = 26, RULE_estructura_control_for = 27, RULE_estructura_control_while = 28, 
		RULE_comentario = 29, RULE_comentario_simple = 30, RULE_valor = 31, RULE_tipo_dato = 32;
	public static final String[] ruleNames = {
		"programa", "instrucciones", "declaracion_variable", "declaraciones_asignacion", 
		"termino_matematico", "lista_expresiones_matematicas", "declaracion_funcion", 
		"parametros_en_declaracion", "lista_parametros_en_declaracion", "llamada_funcion", 
		"valor_funcion", "parametros_en_llamada", "lista_parametros_en_llamada", 
		"bloque_instrucciones", "retorno", "asignacion", "operador_incremento_decremento", 
		"for_asignacion", "for_lista_asignaciones", "operador_asignacion_compuesta", 
		"estructura_control", "estructura_control_if", "estructura_control_else", 
		"expresion_logica", "lista_expresiones_logicas", "termino_logico", "lista_terminos_logicos", 
		"estructura_control_for", "estructura_control_while", "comentario", "comentario_simple", 
		"valor", "tipo_dato"
	};

	@Override
	public String getGrammarFileName() { return "CGrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramaContext extends ParserRuleContext {
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CGrammarVisitor ) return ((CGrammarVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66); instrucciones();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionesContext extends ParserRuleContext {
		public ComentarioContext comentario() {
			return getRuleContext(ComentarioContext.class,0);
		}
		public Declaracion_variableContext declaracion_variable() {
			return getRuleContext(Declaracion_variableContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public RetornoContext retorno() {
			return getRuleContext(RetornoContext.class,0);
		}
		public Llamada_funcionContext llamada_funcion() {
			return getRuleContext(Llamada_funcionContext.class,0);
		}
		public Estructura_controlContext estructura_control() {
			return getRuleContext(Estructura_controlContext.class,0);
		}
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public Declaracion_funcionContext declaracion_funcion() {
			return getRuleContext(Declaracion_funcionContext.class,0);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CGrammarVisitor ) return ((CGrammarVisitor<? extends T>)visitor).visitInstrucciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instrucciones);
		try {
			setState(90);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68); declaracion_variable();
				setState(69); instrucciones();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71); declaracion_funcion();
				setState(72); instrucciones();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(74); asignacion();
				setState(75); instrucciones();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(77); llamada_funcion();
				setState(78); instrucciones();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(80); estructura_control();
				setState(81); instrucciones();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(83); comentario();
				setState(84); instrucciones();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(86); retorno();
				setState(87); instrucciones();
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracion_variableContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CGrammarParser.ID, 0); }
		public Declaraciones_asignacionContext declaraciones_asignacion() {
			return getRuleContext(Declaraciones_asignacionContext.class,0);
		}
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public TerminalNode SIGNO_PUNTO_Y_COMA() { return getToken(CGrammarParser.SIGNO_PUNTO_Y_COMA, 0); }
		public Declaracion_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_variable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CGrammarVisitor ) return ((CGrammarVisitor<? extends T>)visitor).visitDeclaracion_variable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracion_variableContext declaracion_variable() throws RecognitionException {
		Declaracion_variableContext _localctx = new Declaracion_variableContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracion_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); tipo_dato();
			setState(93); match(ID);
			setState(94); declaraciones_asignacion();
			setState(95); match(SIGNO_PUNTO_Y_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaraciones_asignacionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CGrammarParser.ID, 0); }
		public Declaraciones_asignacionContext declaraciones_asignacion() {
			return getRuleContext(Declaraciones_asignacionContext.class,0);
		}
		public TerminalNode SIGNO_COMA() { return getToken(CGrammarParser.SIGNO_COMA, 0); }
		public TerminalNode OPERADOR_ASIGNACION() { return getToken(CGrammarParser.OPERADOR_ASIGNACION, 0); }
		public Termino_matematicoContext termino_matematico() {
			return getRuleContext(Termino_matematicoContext.class,0);
		}
		public Declaraciones_asignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaraciones_asignacion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CGrammarVisitor ) return ((CGrammarVisitor<? extends T>)visitor).visitDeclaraciones_asignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaraciones_asignacionContext declaraciones_asignacion() throws RecognitionException {
		Declaraciones_asignacionContext _localctx = new Declaraciones_asignacionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaraciones_asignacion);
		try {
			setState(103);
			switch (_input.LA(1)) {
			case OPERADOR_ASIGNACION:
				enterOuterAlt(_localctx, 1);
				{
				setState(97); match(OPERADOR_ASIGNACION);
				setState(98); termino_matematico();
				}
				break;
			case SIGNO_COMA:
				enterOuterAlt(_localctx, 2);
				{
				setState(99); match(SIGNO_COMA);
				setState(100); match(ID);
				setState(101); declaraciones_asignacion();
				}
				break;
			case SIGNO_PUNTO_Y_COMA:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Termino_matematicoContext extends ParserRuleContext {
		public Lista_expresiones_matematicasContext lista_expresiones_matematicas() {
			return getRuleContext(Lista_expresiones_matematicasContext.class,0);
		}
		public ValorContext valor() {
			return getRuleContext(ValorContext.class,0);
		}
		public TerminalNode CARACTER_PARENTESIS_CIERRA() { return getToken(CGrammarParser.CARACTER_PARENTESIS_CIERRA, 0); }
		public Termino_matematicoContext termino_matematico() {
			return getRuleContext(Termino_matematicoContext.class,0);
		}
		public TerminalNode CARACTER_PARENTESIS_ABRE() { return getToken(CGrammarParser.CARACTER_PARENTESIS_ABRE, 0); }
		public Termino_matematicoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termino_matematico; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CGrammarVisitor ) return ((CGrammarVisitor<? extends T>)visitor).visitTermino_matematico(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Termino_matematicoContext termino_matematico() throws RecognitionException {
		Termino_matematicoContext _localctx = new Termino_matematicoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_termino_matematico);
		try {
			setState(114);
			switch (_input.LA(1)) {
			case ID:
			case NUMERO:
			case STRING:
			case VALORNULL:
			case VALOR_NULO:
				enterOuterAlt(_localctx, 1);
				{
				setState(105); valor();
				setState(106); lista_expresiones_matematicas();
				}
				break;
			case CARACTER_PARENTESIS_ABRE:
				enterOuterAlt(_localctx, 2);
				{
				setState(108); match(CARACTER_PARENTESIS_ABRE);
				setState(109); termino_matematico();
				setState(110); match(CARACTER_PARENTESIS_CIERRA);
				setState(111); lista_expresiones_matematicas();
				}
				break;
			case CARACTER_PARENTESIS_CIERRA:
			case COMPARADOR_IGUAL:
			case COMPARADOR_DISTINTO:
			case COMPARADOR_MAYOR:
			case COMPARADOR_MENOR:
			case COMPARADOR_MAYOR_IGUAL:
			case COMPARADOR_MENOR_IGUAL:
			case OPERADOR_AND:
			case OPERADOR_OR:
			case SIGNO_COMA:
			case SIGNO_PUNTO_Y_COMA:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lista_expresiones_matematicasContext extends ParserRuleContext {
		public TerminalNode OPERADOR_SUMA() { return getToken(CGrammarParser.OPERADOR_SUMA, 0); }
		public Termino_matematicoContext termino_matematico() {
			return getRuleContext(Termino_matematicoContext.class,0);
		}
		public TerminalNode OPERADOR_RESTA() { return getToken(CGrammarParser.OPERADOR_RESTA, 0); }
		public TerminalNode OPERADOR_DIVISION() { return getToken(CGrammarParser.OPERADOR_DIVISION, 0); }
		public TerminalNode OPERADOR_PRODUCTO() { return getToken(CGrammarParser.OPERADOR_PRODUCTO, 0); }
		public Lista_expresiones_matematicasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_expresiones_matematicas; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CGrammarVisitor ) return ((CGrammarVisitor<? extends T>)visitor).visitLista_expresiones_matematicas(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Lista_expresiones_matematicasContext lista_expresiones_matematicas() throws RecognitionException {
		Lista_expresiones_matematicasContext _localctx = new Lista_expresiones_matematicasContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_lista_expresiones_matematicas);
		try {
			setState(125);
			switch (_input.LA(1)) {
			case OPERADOR_SUMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(116); match(OPERADOR_SUMA);
				setState(117); termino_matematico();
				}
				break;
			case OPERADOR_RESTA:
				enterOuterAlt(_localctx, 2);
				{
				setState(118); match(OPERADOR_RESTA);
				setState(119); termino_matematico();
				}
				break;
			case OPERADOR_PRODUCTO:
				enterOuterAlt(_localctx, 3);
				{
				setState(120); match(OPERADOR_PRODUCTO);
				setState(121); termino_matematico();
				}
				break;
			case OPERADOR_DIVISION:
				enterOuterAlt(_localctx, 4);
				{
				setState(122); match(OPERADOR_DIVISION);
				setState(123); termino_matematico();
				}
				break;
			case CARACTER_PARENTESIS_CIERRA:
			case COMPARADOR_IGUAL:
			case COMPARADOR_DISTINTO:
			case COMPARADOR_MAYOR:
			case COMPARADOR_MENOR:
			case COMPARADOR_MAYOR_IGUAL:
			case COMPARADOR_MENOR_IGUAL:
			case OPERADOR_AND:
			case OPERADOR_OR:
			case SIGNO_COMA:
			case SIGNO_PUNTO_Y_COMA:
				enterOuterAlt(_localctx, 5);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracion_funcionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CGrammarParser.ID, 0); }
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public TerminalNode CARACTER_PARENTESIS_CIERRA() { return getToken(CGrammarParser.CARACTER_PARENTESIS_CIERRA, 0); }
		public Bloque_instruccionesContext bloque_instrucciones() {
			return getRuleContext(Bloque_instruccionesContext.class,0);
		}
		public Parametros_en_declaracionContext parametros_en_declaracion() {
			return getRuleContext(Parametros_en_declaracionContext.class,0);
		}
		public TerminalNode SIGNO_PUNTO_Y_COMA() { return getToken(CGrammarParser.SIGNO_PUNTO_Y_COMA, 0); }
		public TerminalNode CARACTER_PARENTESIS_ABRE() { return getToken(CGrammarParser.CARACTER_PARENTESIS_ABRE, 0); }
		public Declaracion_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_funcion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CGrammarVisitor ) return ((CGrammarVisitor<? extends T>)visitor).visitDeclaracion_funcion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracion_funcionContext declaracion_funcion() throws RecognitionException {
		Declaracion_funcionContext _localctx = new Declaracion_funcionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaracion_funcion);
		try {
			setState(141);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(127); tipo_dato();
				setState(128); match(ID);
				setState(129); match(CARACTER_PARENTESIS_ABRE);
				setState(130); parametros_en_declaracion();
				setState(131); match(CARACTER_PARENTESIS_CIERRA);
				setState(132); match(SIGNO_PUNTO_Y_COMA);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(134); tipo_dato();
				setState(135); match(ID);
				setState(136); match(CARACTER_PARENTESIS_ABRE);
				setState(137); parametros_en_declaracion();
				setState(138); match(CARACTER_PARENTESIS_CIERRA);
				setState(139); bloque_instrucciones();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parametros_en_declaracionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CGrammarParser.ID, 0); }
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public TerminalNode CARACTER_PARENTESIS_CIERRA() { return getToken(CGrammarParser.CARACTER_PARENTESIS_CIERRA, 0); }
		public Parametros_en_declaracionContext parametros_en_declaracion() {
			return getRuleContext(Parametros_en_declaracionContext.class,0);
		}
		public Lista_parametros_en_declaracionContext lista_parametros_en_declaracion() {
			return getRuleContext(Lista_parametros_en_declaracionContext.class,0);
		}
		public TerminalNode CARACTER_PARENTESIS_ABRE() { return getToken(CGrammarParser.CARACTER_PARENTESIS_ABRE, 0); }
		public Parametros_en_declaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros_en_declaracion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CGrammarVisitor ) return ((CGrammarVisitor<? extends T>)visitor).visitParametros_en_declaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Parametros_en_declaracionContext parametros_en_declaracion() throws RecognitionException {
		Parametros_en_declaracionContext _localctx = new Parametros_en_declaracionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_parametros_en_declaracion);
		try {
			setState(153);
			switch (_input.LA(1)) {
			case TIPO_DATO_INT:
			case TIPO_DATO_DOUBLE:
			case TIPO_DATO_FLOAT:
			case TIPO_DATO_CHAR:
			case TIPO_DATO_STRING:
			case TIPO_DATO_VOID:
				enterOuterAlt(_localctx, 1);
				{
				setState(143); tipo_dato();
				setState(144); match(ID);
				setState(145); lista_parametros_en_declaracion();
				}
				break;
			case CARACTER_PARENTESIS_ABRE:
				enterOuterAlt(_localctx, 2);
				{
				setState(147); match(CARACTER_PARENTESIS_ABRE);
				setState(148); parametros_en_declaracion();
				setState(149); match(CARACTER_PARENTESIS_CIERRA);
				setState(150); lista_parametros_en_declaracion();
				}
				break;
			case CARACTER_PARENTESIS_CIERRA:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lista_parametros_en_declaracionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CGrammarParser.ID, 0); }
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
